# ros_cat_planning

./: README.md
cat_planners/: CMakeLists.txt  manifest.xml  package.xml
cat_planners/cfg/: CVX.cfg
cat_planners/include/cat_planners/: convex_constraint_solver.h  linear_joint_stepper.h  util.h
cat_planners/lib/: cat_planners_plugin_description.xml  plugin_description.xml
cat_planners/src/: convex_constraint_solver.cpp  linear_joint_stepper.cpp
cat_planners/src/cvxgen_extended/: Makefile  ldl.c  matrix_support.c  solver.c  solver.h  testsolver.c  util.c
cat_planners/src/cvxgen_posture/: Makefile  ldl.c  matrix_support.c  problem.txt  solver.c  solver.h  testsolver.c
