<?xml version="1.0"?>
<package>
  <name>cat_planners</name>
  <version>0.0.1</version>
  <description>
    This package contains a planner that uses sequential convex optimization (SQP) to solve for movement trajectories.
    It is designed to work at a high rate, useful for teleoperation.
    
    As this package uses generated solvers from www.cvxgen.com, it is strictly ACADEMIC USE ONLY.
  </description>

  <author email="adamleeper@gmail.com">Adam Leeper</author>
  <maintainer email="adamleeper@gmail.com">Adam Leeper</maintainer>

  <license>CVX Generated Solvers are Academic Use Only</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>moveit_ros_planning</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>moveit_core</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>moveit_ros_planning</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>


  <export>
  
    <moveit_core plugin="${prefix}/cat_planners_plugin_description.xml"/>

  </export>
</package>
